# my-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/api/: __init__.py  schemas.py
app/api/routes/: email.py  tasks.py  voice.py
app/core/: __init__.py  config.py
app/database/: __init__.py  init_db.py  session.py
app/models/: __init__.py  task.py
database/: schema.sql
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: api.md  architecture.md  deployment.md  examples.md
