[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ai-operator"
version = "1.0.0"
description = "A production-ready multi-channel AI operator for autonomous task execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Autonomous AI Operator Team"}
]
keywords = ["ai", "automation", "voice", "email", "fastapi", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "sqlalchemy>=2.0.25",
    "redis>=5.0.1",
    "pgvector>=0.2.5",
    "anthropic>=0.18.1",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
    "twilio>=8.13.0",
    "aiosmtplib>=3.0.1",
    "email-validator>=2.1.0",
    "cryptography>=41.0.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
    "ipdb>=0.13.13",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=4.9.3",
    "qdrant-client>=1.7.0",
    "celery>=5.3.6",
]

[project.urls]
Homepage = "https://github.com/yourusername/autonomous-ai-operator"
Documentation = "https://docs.autonomous-ai-operator.com"
Repository = "https://github.com/yourusername/autonomous-ai-operator"
Issues = "https://github.com/yourusername/autonomous-ai-operator/issues"

[project.scripts]
autonomous-ai-operator = "autonomous_ai_operator.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["autonomous_ai_operator*"]

[tool.setuptools.package-data]
autonomous_ai_operator = ["*.pyi"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=autonomous_ai_operator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["autonomous_ai_operator"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
